switch to servlet checkpoint: unusable