@@ -7,11 +7,9 @@ import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @RestController
 @RequestMapping("/users")
@@ -26,32 +24,35 @@ public class PlanController {
     }
 
     @GetMapping(value = "/userPlans")
-    public Flux<PlanDTO> getPlans(@AuthenticationPrincipal Jwt jwt) {
-        return userPlanRepository.findByUserID(jwt.getSubject()).map(Plan::toDTO);
+    public List<PlanDTO> getPlans(@AuthenticationPrincipal Jwt jwt) {
+        return userPlanRepository.findByUserID(jwt.getSubject()).stream()
+                .map(Plan::toDTO)
+                .toList();
     }
 
     @PutMapping(value = "/userPlan")
-    public Mono<PlanDTO> setPlan(@AuthenticationPrincipal Jwt jwt, @RequestBody PlanDTO userItem) {
+    public PlanDTO setPlan(@AuthenticationPrincipal Jwt jwt, @RequestBody PlanDTO userItem) {
         PlanDTO dto = new PlanDTO(userItem.itemID(), userItem.data());
-        return userPlanRepository.save(dto.toPlan(jwt.getSubject())).map(Plan::toDTO);
+        return userPlanRepository.save(dto.toPlan(jwt.getSubject())).toDTO();
     }
 
     @DeleteMapping(value = "/userPlan/{planID}")
-    public Mono<String> deletePlan(@AuthenticationPrincipal Jwt jwt, @PathVariable String planID) {
-        return userPlanRepository.deleteByUserIDAndItemID(jwt.getSubject(), planID)
-                .thenReturn("User plan removed successfully.");
+    public String deletePlan(@AuthenticationPrincipal Jwt jwt, @PathVariable String planID) {
+        userPlanRepository.deleteByUserIDAndItemID(jwt.getSubject(), UUID.fromString(planID));
+        return("User plan removed successfully.");
     }
 
     @PutMapping(value = "/updateAllUserPlans")
     @Transactional
-    public Mono<ResponseEntity<String>> setPlans(@AuthenticationPrincipal Jwt jwt, @RequestBody List<PlanDTO> userItems) {
-        List<PlanDTO> dtos = userItems.stream()
-                .map(userItem -> new PlanDTO(userItem.itemID(), userItem.data()))
-                .toList();
+    public ResponseEntity<String> setPlans(@AuthenticationPrincipal Jwt jwt, @RequestBody List<PlanDTO> userItems) {
         String userID = jwt.getSubject();
-        return userPlanRepository.saveAll(dtos.stream().map(dto -> dto.toPlan(userID)).collect(Collectors.toList()))
-                .collectList()
-                .map(savedPlans -> ResponseEntity.ok("Successfully updated " + savedPlans.size() + " plans"))
-                .defaultIfEmpty(ResponseEntity.status(500).body("Failed to update plans"));
+        try {
+            List<Plan> savedPlans = userPlanRepository.saveAll(userItems.stream()
+                    .map(dto -> dto.toPlan(userID))
+                    .toList());
+            return ResponseEntity.ok("Successfully updated " + savedPlans.size() + " plans");
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body("Failed to update plans");
+        }
     }
 }
